Fix ShellOperation and BackgroundOperation to work.